--- a/index.html
+++ b/index.html
@@ -1,8 +1,52 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<meta charset="utf-8">
+		<link rel="stylesheet" type="text/css" href="style.css">
 		<link href="https://fonts.googleapis.com/css?family=Droid+Serif:400,700,700i|Lato:400,700,900" rel="stylesheet">
+		<title>Tech Lancaster</title>
 	</head>
 	<body>
+		<header>
+			<h2></h2>
+			<nav>
+				<ul>
+					<li>
+						<a></a>
+					</li>
+					<li>
+						<a></a>
+					</li>
+					<li>
+						<a></a>
+					</li>
+				</ul>
+			</nav>
+		</header>
+		<section>
+			<h1></h1>
+		</section>
+		<section>
+			<article>
+				<p>
+				</p>
+				<p>
+				</p>
+				<p>
+				</p>
+			</article>
+			<div>
+				<h4></h4>
+				<h3></h3>
+				<h4></h4>
+				<h5></h5>
+				<div></div>
+				<div></div>
+			</div>
+		</section>
+		<footer>
+			<h3></h3>
+			<h3></h3>
+		</footer>
 	</body>
 </html>
