--- a/community.html
+++ b/community.html
@@ -1,7 +1,127 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<meta charset="utf-8">
+		<link rel="stylesheet" type="text/css" href="style.css">
+		<link href="https://fonts.googleapis.com/css?family=Droid+Serif:400,700,700i|Lato:400,700,900" rel="stylesheet">
+		<title>Tech Lancaster</title>
 	</head>
 	<body>
+		<header>
+			<h2></h2>
+			<nav>
+				<ul>
+					<li>
+						<a></a>
+					</li>
+					<li>
+						<a></a>
+					</li>
+					<li>
+						<a></a>
+					</li>
+				</ul>
+			</nav>
+		</header>
+		<section>
+			<h1></h1>
+		</section>
+		<section>
+			<article>
+				<p>
+				</p>
+				<p>
+				</p>
+				<p>
+				</p>
+				<div>
+				</div>
+				<div>
+				</div>
+			</article>
+			<div>
+				<h4></h4>
+				<h3></h3>
+				<h3></h3>
+				<h3></h3>
+				<h3></h3>
+				<h3></h3>
+				<h3></h3>
+				<h3></h3>
+				<h3></h3>
+			</div>
+		</section>
+		<section>
+			<aside>
+				<h3></h3>
+				<h4></h4>
+				<p>
+				</p>
+				<h4></h4>
+				<p>
+				</p>
+			</aside>
+			<nav>
+				<h4></h4>
+				<a></a>
+				<a></a>
+				<a></a>
+				<a></a>
+				<a></a>
+			</nav>
+		</section>
+		<div>
+			<h3></h3>
+			<p>
+			</p>
+		</div>
+		<article>
+			<h3></h3>
+			<p>
+			</p>
+			<ol>
+				<li>
+				</li>
+				<li>
+				</li>
+				<li>
+				</li>
+				<li>
+				</li>
+				<li>
+				</li>
+				<li>
+				</li>
+				<li>
+				</li>
+				<li>
+				</li>
+				<li>
+				</li>
+				<li>
+				</li>
+			</ol>
+			<p>
+			</p>
+		</article>
+		<div>
+			<h3></h3>
+			<ul>
+				<li>
+				</li>
+				<li>
+				</li>
+				<li>
+				</li>
+			</ul>
+		</div>
+		<div>
+			<p>
+			</p>
+		</div>
+		<footer>
+			<h3></h3>
+			<h3></h3>
+		</footer>
 	</body>
 </html>
