--- a/calendar.html
+++ b/calendar.html
@@ -8,85 +8,85 @@
 	</head>
 	<body>
 		<header>
-			<h2></h2>
+			<h2>TECH</h2><h2>LANCASTER</h2>
 			<nav>
 				<ul>
 					<li>
-						<a></a>
+						<a href="/">RESOURCES FOR MEETUPS</a>
 					</li>
 					<li>
-						<a></a>
+						<a href="/">CALENDAR</a>
 					</li>
 					<li>
-						<a></a>
+						<a href="/">COMMUNITY</a>
 					</li>
 				</ul>
 			</nav>
 		</header>
 		<section>
-			<h1></h1>
+			<h1>Supporting the tech community in Lancaster.</h1>
 		</section>
 		<article>
 			<div>
-				<h3></h3>
-				<h4></h4>
-				<h5></h5>
-				<div></div>
-				<div></div>
+				<h3>Central PA Linux User Group</h3>
+				<h4>October 10, 6:30pm</h4>
+				<h5>Olmstead Building, Penn State</h5>
+				<div>RSVP »</div>
+				<div>Visit Site »</div>
 			</div>
 			<div>
-				<h3></h3>
-				<h4></h4>
-				<h5></h5>
-				<div></div>
-				<div></div>
+				<h3>Central PA Linux User Group</h3>
+				<h4>October 10, 6:30pm</h4>
+				<h5>Olmstead Building, Penn State</h5>
+				<div>RSVP »</div>
+				<div>Visit Site »</div>
 			</div>
 			<div>
-				<h3></h3>
-				<h4></h4>
-				<h5></h5>
-				<div></div>
-				<div></div>
+				<h3>Central PA Linux User Group</h3>
+				<h4>October 10, 6:30pm</h4>
+				<h5>Olmstead Building, Penn State</h5>
+				<div>RSVP »</div>
+				<div>Visit Site »</div>
 			</div>
 			<div>
-				<h3></h3>
-				<h4></h4>
-				<h5></h5>
-				<div></div>
-				<div></div>
+				<h3>Central PA Linux User Group</h3>
+				<h4>October 10, 6:30pm</h4>
+				<h5>Olmstead Building, Penn State</h5>
+				<div>RSVP »</div>
+				<div>Visit Site »</div>
 			</div>
 			<div>
-				<h3></h3>
-				<h4></h4>
-				<h5></h5>
-				<div></div>
-				<div></div>
+				<h3>Central PA Linux User Group</h3>
+				<h4>October 10, 6:30pm</h4>
+				<h5>Olmstead Building, Penn State</h5>
+				<div>RSVP »</div>
+				<div>Visit Site »</div>
 			</div>
 			<div>
-				<h3></h3>
-				<h4></h4>
-				<h5></h5>
-				<div></div>
-				<div></div>
+				<h3>Central PA Linux User Group</h3>
+				<h4>October 10, 6:30pm</h4>
+				<h5>Olmstead Building, Penn State</h5>
+				<div>RSVP »</div>
+				<div>Visit Site »</div>
 			</div>
 		</article>
 		<section>
 			<section>
-				<h3></h3>
-				<p>
+				<h3>Get Involved</h3>
+				<p>We’re always looking for folks to share knowledge, organize and volunteer with existing meetups.
 				</p>
-				<div></div>
+				<div>Get in Touch »</div>
 			</section>
 			<section>
-				<h3></h3>
-				<p>
+				<h3>Want to start a meetup?</h3>
+				<p>Whether you’re new to the area, or working with a new technology, we love seeing the local meetup scene grow. In fact, we’re working on some resources to help you get started.
 				</p>
-				<div></div>
+				<div>Check it out »</div>
 			</section>
 		</section>
 		<footer>
-			<h3></h3>
-			<h3></h3>
+			<h3>@techlancaster</h3>
+			<h3>&copy; 2017 TechLancaster</h3>
 		</footer>
 	</body>
 </html>
