--- a/community.html
+++ b/community.html
@@ -8,17 +8,17 @@
 	</head>
 	<body>
 		<header>
-			<h2>TECH</h2><h2>LANCASTER</h2>
+			<a href="index.html"><h2>TECH</h2><h2>LANCASTER</h2></a>
 			<nav>
 				<ul>
 					<li>
-						<a href="/">RESOURCES FOR MEETUPS</a>
+						<a href="http://techlancaster.com/resources" target="_blank">RESOURCES FOR MEETUPS</a>
 					</li>
 					<li>
-						<a href="/">CALENDAR</a>
+						<a href="calendar.html">CALENDAR</a>
 					</li>
 					<li>
-						<a href="/">COMMUNITY</a>
+						<a href="community.html">COMMUNITY</a>
 					</li>
 				</ul>
 			</nav>
@@ -34,8 +34,8 @@
 				</p>
 				<p>The past year has seen amazing growth in Lancaster's tech scene, and we believe this is only the beginning. As members of the tech community, we want to support this growth and ensure the community remains a healthy, open, and welcoming place for all its current and future members.
 				</p>
-				<div>Join us on Meetup</div>
-				<div>Contribute</div>
+				<a href="https://www.meetup.com/techlancaster" target="_blank">Join us on Meetup</a>
+				<a href="https://github.com/TechLancaster/community">Contribute</a>
 			</article>
 			<div>
 				<h4>OUR MEETUPS</h4>
