--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
 	</head>
 	<body>
 		<header>
-			<h2>TECH</h2><h2>LANCASTER</h2>
+			<a href="index.html"><h2>TECH</h2><h2>LANCASTER</h2></a>
 			<nav>
 				<ul>
 					<li>
-						<a href="/">RESOURCES FOR MEETUPS</a>
+						<a href="http://techlancaster.com/resources" target="_blank">RESOURCES FOR MEETUPS</a>
 					</li>
 					<li>
-						<a href="/">CALENDAR</a>
+						<a href="calendar.html">CALENDAR</a>
 					</li>
 					<li>
-						<a href="/">COMMUNITY</a>
+						<a href="community.html">COMMUNITY</a>
 					</li>
 				</ul>
 			</nav>
@@ -40,8 +40,8 @@
 				<h3>Central PA Linux User Group</h3>
 				<h4>October 10, 6:30pm</h4>
 				<h5>Olmstead Building, Penn State</h5>
-				<div>RSVP »</div>
-				<div>Visit Site »</div>
+				<a href="https://www.meetup.com/?_cookie-check=f8Ng7UUmU_ar5aqX" target="_blank">RSVP »</a>
+				<a href="http://techlancaster.com" target="_blank">Visit Site »</a>
 			</div>
 		</section>
 		<footer>
