--- a/calendar.html
+++ b/calendar.html
@@ -8,21 +8,24 @@
 	</head>
 	<body>
 		<header>
-			<h2>TECH</h2><h2>LANCASTER</h2>
+			<a href="index.html"><h2>TECH</h2><h2>LANCASTER</h2></a>
 			<nav>
 				<ul>
 					<li>
-						<a href="/">RESOURCES FOR MEETUPS</a>
+						<a href="http://techlancaster.com/resources" target="_blank">RESOURCES FOR MEETUPS</a>
 					</li>
 					<li>
-						<a href="/">CALENDAR</a>
+						<a href="calendar.html">CALENDAR</a>
 					</li>
 					<li>
-						<a href="/">COMMUNITY</a>
+						<a href="community.html">COMMUNITY</a>
 					</li>
 				</ul>
 			</nav>
 		</header>
+		<section>
+			<h1>Supporting the tech community in Lancaster.</h1>
+		</section>
 		<section>
 			<h1>Supporting the tech community in Lancaster.</h1>
 		</section>
@@ -31,43 +34,43 @@
 				<h3>Central PA Linux User Group</h3>
 				<h4>October 10, 6:30pm</h4>
 				<h5>Olmstead Building, Penn State</h5>
-				<div>RSVP »</div>
-				<div>Visit Site »</div>
+				<a href="https://www.meetup.com/?_cookie-check=f8Ng7UUmU_ar5aqX" target="_blank">RSVP »</a>
+				<a href="http://techlancaster.com" target="_blank">Visit Site »</a>
 			</div>
 			<div>
 				<h3>Central PA Linux User Group</h3>
 				<h4>October 10, 6:30pm</h4>
 				<h5>Olmstead Building, Penn State</h5>
-				<div>RSVP »</div>
-				<div>Visit Site »</div>
+				<a href="https://www.meetup.com/?_cookie-check=f8Ng7UUmU_ar5aqX" target="_blank">RSVP »</a>
+				<a href="http://techlancaster.com" target="_blank">Visit Site »</a>
 			</div>
 			<div>
 				<h3>Central PA Linux User Group</h3>
 				<h4>October 10, 6:30pm</h4>
 				<h5>Olmstead Building, Penn State</h5>
-				<div>RSVP »</div>
-				<div>Visit Site »</div>
+				<a href="https://www.meetup.com/?_cookie-check=f8Ng7UUmU_ar5aqX" target="_blank">RSVP »</a>
+				<a href="http://techlancaster.com" target="_blank">Visit Site »</a>
 			</div>
 			<div>
 				<h3>Central PA Linux User Group</h3>
 				<h4>October 10, 6:30pm</h4>
 				<h5>Olmstead Building, Penn State</h5>
-				<div>RSVP »</div>
-				<div>Visit Site »</div>
+				<a href="https://www.meetup.com/?_cookie-check=f8Ng7UUmU_ar5aqX" target="_blank">RSVP »</a>
+				<a href="http://techlancaster.com" target="_blank">Visit Site »</a>
 			</div>
 			<div>
 				<h3>Central PA Linux User Group</h3>
 				<h4>October 10, 6:30pm</h4>
 				<h5>Olmstead Building, Penn State</h5>
-				<div>RSVP »</div>
-				<div>Visit Site »</div>
+				<a href="https://www.meetup.com/?_cookie-check=f8Ng7UUmU_ar5aqX" target="_blank">RSVP »</a>
+				<a href="http://techlancaster.com" target="_blank">Visit Site »</a>
 			</div>
 			<div>
 				<h3>Central PA Linux User Group</h3>
 				<h4>October 10, 6:30pm</h4>
 				<h5>Olmstead Building, Penn State</h5>
-				<div>RSVP »</div>
-				<div>Visit Site »</div>
+				<a href="https://www.meetup.com/?_cookie-check=f8Ng7UUmU_ar5aqX" target="_blank">RSVP »</a>
+				<a href="http://techlancaster.com" target="_blank">Visit Site »</a>
 			</div>
 		</article>
 		<section>
@@ -75,13 +78,13 @@
 				<h3>Get Involved</h3>
 				<p>We’re always looking for folks to share knowledge, organize and volunteer with existing meetups.
 				</p>
-				<div>Get in Touch »</div>
+				<a href="http://techlancaster.com/resources" target="_blank">Get in Touch »</a>
 			</section>
 			<section>
 				<h3>Want to start a meetup?</h3>
 				<p>Whether you’re new to the area, or working with a new technology, we love seeing the local meetup scene grow. In fact, we’re working on some resources to help you get started.
 				</p>
-				<div>Check it out »</div>
+				<a href="http://techlancaster.com/resources" target="_blank">Check it out »</a>
 			</section>
 		</section>
 		<footer>
