--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 		<title>Tech Lancaster</title>
 	</head>
 	<body>
-		<header>
-			<a href="index.html"><h2>TECH</h2><h2>LANCASTER</h2></a>
+		<header class="header">
+			<a href="index.html" class="logo"><h2 class="tech">TECH</h2><h2 class="lancaster">LANCASTER</h2></a>
 			<nav>
 				<ul>
 					<li>
