--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<header class="header">
 			<a href="index.html" class="logo"><h2 class="tech">TECH</h2><h2 class="lancaster">LANCASTER</h2></a>
 			<nav>
+				<img src="images/menu.png">
 				<ul>
 					<li>
 						<a href="http://techlancaster.com/resources" target="_blank">RESOURCES FOR MEETUPS</a>
