--- a/calendar.html
+++ b/calendar.html
@@ -7,9 +7,10 @@
 		<title>Tech Lancaster</title>
 	</head>
 	<body>
-		<header>
-			<a href="index.html"><h2>TECH</h2><h2>LANCASTER</h2></a>
+		<header class="header">
+			<a href="index.html" class="logo"><h2 class="tech">TECH</h2><h2 class="lancaster">LANCASTER</h2></a>
 			<nav>
+				<img src="images/menu.png">
 				<ul>
 					<li>
 						<a href="http://techlancaster.com/resources" target="_blank">RESOURCES FOR MEETUPS</a>
@@ -23,11 +24,8 @@
 				</ul>
 			</nav>
 		</header>
-		<section>
-			<h1>Supporting the tech community in Lancaster.</h1>
-		</section>
-		<section>
-			<h1>Supporting the tech community in Lancaster.</h1>
+		<section class="hero">
+			<h1>Upcoming Meetups</h1>
 		</section>
 		<article>
 			<div>
