--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 				</ul>
 			</nav>
 		</header>
-		<section>
+		<section class="hero">
 			<h1>Supporting the tech community in Lancaster.</h1>
 		</section>
 		<section>
