added event scss and changed a few things in the header.

--- a/calendar.html
+++ b/calendar.html
@@ -28,42 +28,42 @@
 			<h1>Upcoming Meetups</h1>
 		</section>
 		<article>
-			<div>
+			<div class="event">
 				<h3>Central PA Linux User Group</h3>
 				<h4>October 10, 6:30pm</h4>
 				<h5>Olmstead Building, Penn State</h5>
 				<a href="https://www.meetup.com/?_cookie-check=f8Ng7UUmU_ar5aqX" target="_blank">RSVP »</a>
 				<a href="http://techlancaster.com" target="_blank">Visit Site »</a>
 			</div>
-			<div>
+			<div class="event">
 				<h3>Central PA Linux User Group</h3>
 				<h4>October 10, 6:30pm</h4>
 				<h5>Olmstead Building, Penn State</h5>
 				<a href="https://www.meetup.com/?_cookie-check=f8Ng7UUmU_ar5aqX" target="_blank">RSVP »</a>
 				<a href="http://techlancaster.com" target="_blank">Visit Site »</a>
 			</div>
-			<div>
+			<div class="event">
 				<h3>Central PA Linux User Group</h3>
 				<h4>October 10, 6:30pm</h4>
 				<h5>Olmstead Building, Penn State</h5>
 				<a href="https://www.meetup.com/?_cookie-check=f8Ng7UUmU_ar5aqX" target="_blank">RSVP »</a>
 				<a href="http://techlancaster.com" target="_blank">Visit Site »</a>
 			</div>
-			<div>
+			<div class="event">
 				<h3>Central PA Linux User Group</h3>
 				<h4>October 10, 6:30pm</h4>
 				<h5>Olmstead Building, Penn State</h5>
 				<a href="https://www.meetup.com/?_cookie-check=f8Ng7UUmU_ar5aqX" target="_blank">RSVP »</a>
 				<a href="http://techlancaster.com" target="_blank">Visit Site »</a>
 			</div>
-			<div>
+			<div class="event">
 				<h3>Central PA Linux User Group</h3>
 				<h4>October 10, 6:30pm</h4>
 				<h5>Olmstead Building, Penn State</h5>
 				<a href="https://www.meetup.com/?_cookie-check=f8Ng7UUmU_ar5aqX" target="_blank">RSVP »</a>
 				<a href="http://techlancaster.com" target="_blank">Visit Site »</a>
 			</div>
-			<div>
+			<div class="event">
 				<h3>Central PA Linux User Group</h3>
 				<h4>October 10, 6:30pm</h4>
 				<h5>Olmstead Building, Penn State</h5>
