added in content mixins.

--- a/calendar.html
+++ b/calendar.html
@@ -85,7 +85,7 @@
 				<a href="http://techlancaster.com/resources" target="_blank">Check it out »</a>
 			</section>
 		</section>
-		<footer>
+		<footer class="footer">
 			<h3>@techlancaster</h3>
 			<h3>&copy; 2017 TechLancaster</h3>
 		</footer>
