--- a/community.html
+++ b/community.html
@@ -120,7 +120,7 @@
 			<p>TechLancaster does not endorse any business, product, service, etc. This allows us to remain neutral and focus on growing the tech community in Lancaster.
 			</p>
 		</div>
-		<footer>
+		<footer class="footer">
 			<h3>@techlancaster</h3>
 			<h3>&copy; 2017 TechLancaster</h3>
 		</footer>
