--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
 				<h3>Central PA Linux User Group</h3>
 				<h4>October 10, 6:30pm</h4>
 				<h5>Olmstead Building, Penn State</h5>
-				<a href="https://www.meetup.com/?_cookie-check=f8Ng7UUmU_ar5aqX" target="_blank">RSVP »</a>
-				<a href="http://techlancaster.com" target="_blank">Visit Site »</a>
+				<a href="https://www.meetup.com/?_cookie-check=f8Ng7UUmU_ar5aqX" target="_blank">RSVP <span>»</span></a>
+				<a href="http://techlancaster.com" target="_blank">Visit Site <span>»</span></a>
 			</div>
 		</section>
-		<footer>
+		<footer class="footer">
 			<h3>@techlancaster</h3>
 			<h3>&copy; 2017 TechLancaster</h3>
 		</footer>
