Finished main section

--- a/community.html
+++ b/community.html
@@ -27,7 +27,7 @@
 		<section class="hero">
 			<h1>Lancaster’s Tech Community</h1>
 		</section>
-		<section>
+		<section class="main-section">
 			<article>
 				<p>TechLancaster started as a simple local meetup, a safe place for like-minded tech people to come together and geek out.
 				</p>
@@ -38,7 +38,7 @@
 				<a href="https://www.meetup.com/techlancaster" target="_blank">Join us on Meetup</a>
 				<a href="https://github.com/TechLancaster/community">Contribute</a>
 			</article>
-			<div>
+			<div class="underbar">
 				<h4>OUR MEETUPS</h4>
 				<h3>Pub Standards</h3>
 				<h3>TechLancaster</h3>
