--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		<section class="hero">
 			<h1>Supporting the tech community in Lancaster.</h1>
 		</section>
-		<section>
+		<section class="main-section">
 			<article>
 				<p>TechLancaster started as a simple local meetup, a safe place for like-minded tech people to come together and geek out.
 				</p>
@@ -36,11 +36,11 @@
 				<p>The past year has seen amazing growth in Lancaster's tech scene, and we believe this is only the beginning. As members of the tech community, we want to support this growth and ensure the community remains a healthy, open, and welcoming place for all its current and future members.
 				</p>
 			</article>
-			<h4>UPCOMING MEETUP</h4>
+			<h4 class="underbar">UPCOMING MEETUP</h4>
 			<div class="event">
 				<h3>Central PA Linux User Group</h3>
-				<h4>October 10, 6:30pm</h4>
-				<h5>Olmstead Building, Penn State</h5>
+				<h4 class="eh4">October 10, 6:30pm</h4>
+				<h5 class="eh5">Olmstead Building, Penn State</h5>
 				<a href="https://www.meetup.com/?_cookie-check=f8Ng7UUmU_ar5aqX" target="_blank">RSVP <span>»</span></a>
 				<a href="http://techlancaster.com" target="_blank">Visit Site <span>»</span></a>
 			</div>
