added features to community page. finished community page. Also fixed minor bugs.

--- a/community.html
+++ b/community.html
@@ -27,7 +27,7 @@
 		<section class="hero">
 			<h1>Lancaster’s Tech Community</h1>
 		</section>
-		<section class="main-section">
+		<section class="main_section">
 			<article>
 				<p>TechLancaster started as a simple local meetup, a safe place for like-minded tech people to come together and geek out.
 				</p>
@@ -50,13 +50,13 @@
 				<h3>Lancaster Linux Users Group</h3>
 			</div>
 		</section>
-		<section>
+		<section class="core_values">
 			<aside id="core_values">
 				<h3>Core Values</h3>
-				<h4>Open</h4>
+				<h4 class="paragraph_break">Open</h4>
 				<p>Everything TechLancaster does is transparent.
 				</p>
-				<h4>Local</h4>
+				<h4 class="paragraph_break">Local</h4>
 				<p>TechLancaster's primary goal is the support and growth of the tech scene in Lancaster, PA.
 				</p>
 			</aside>
@@ -69,16 +69,16 @@
 				<a href="#disclaimer">Disclaimer</a>
 			</nav>
 		</section>
-		<div id="core_purpose">
+		<div class="greybox" id="core_purpose">
 			<h3>Core Purpose</h3>
-			<p>TechLancaster's core purpose is to support the technology community in Lancaster, PA.
+			<p class="paragraph_break">TechLancaster's core purpose is to support the technology community in Lancaster, PA.
 			</p>
 		</div>
-		<article id="code_of_conduct">
+		<article class="normal_sections" id="code_of_conduct">
 			<h3>Code of Ethics / Conduct</h3>
-			<p>The Lancaster tech community expects that activities, events, and digital forums:
+			<p class="paragraph_break">The Lancaster tech community expects that activities, events, and digital forums:
 			</p>
-			<ol>
+			<ol class="paragraph_break">
 				<li>Are a safe and respectful environment for all participants.
 				</li>
 				<li>Are a place where people are free to fully express their identities.
@@ -102,12 +102,12 @@
 				<li>Provide an environment where people are free from discrimination or harassment.
 				</li>
 			</ol>
-			<p>The Lancaster tech community reserves the right to ask anyone in violation of these policies not to participate in activities, events, and digital forums.
+			<p class="paragraph_break end-of-list">The Lancaster tech community reserves the right to ask anyone in violation of these policies not to participate in activities, events, and digital forums.
 			</p>
 		</article>
-		<div id="principles">
+		<div class="greybox" id="principles">
 			<h3>Principles</h3>
-			<ul>
+			<ul class="paragraph_break">
 				<li>Free and Open
 				</li>
 				<li>Driven by community not commerce
@@ -116,7 +116,7 @@
 				</li>
 			</ul>
 		</div>
-		<div id="disclaimer">
+		<div class="normal_sections" id="disclaimer">
 			<p>TechLancaster does not endorse any business, product, service, etc. This allows us to remain neutral and focus on growing the tech community in Lancaster.
 			</p>
 		</div>
