--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		<section class="hero">
 			<h1>Supporting the tech community in Lancaster.</h1>
 		</section>
-		<section class="main-section">
+		<section class="main_section">
 			<article>
 				<p>TechLancaster started as a simple local meetup, a safe place for like-minded tech people to come together and geek out.
 				</p>
@@ -41,7 +41,7 @@
 				<h3>Central PA Linux User Group</h3>
 				<h4 class="eh4">October 10, 6:30pm</h4>
 				<h5 class="eh5">Olmstead Building, Penn State</h5>
-				<a href="https://www.meetup.com/?_cookie-check=f8Ng7UUmU_ar5aqX" target="_blank">RSVP <span>»</span></a>
+				<a href="https://www.meetup.com/?_cookie-check=f8Ng7UUmU_ar5aqX" target="_blank">RSVP <span>»</span></as>
 				<a href="http://techlancaster.com" target="_blank">Visit Site <span>»</span></a>
 			</div>
 		</section>
