finished calendar mobile. did some bug fixes as well. I will be changing the burgerbar and sliding animations next.

--- a/calendar.html
+++ b/calendar.html
@@ -27,7 +27,7 @@
 		<section class="hero">
 			<h1>Upcoming Meetups</h1>
 		</section>
-		<article>
+		<article class="schedule">
 			<div class="event">
 				<h3>Central PA Linux User Group</h3>
 				<h4>October 10, 6:30pm</h4>
@@ -67,18 +67,18 @@
 				<h3>Central PA Linux User Group</h3>
 				<h4>October 10, 6:30pm</h4>
 				<h5>Olmstead Building, Penn State</h5>
-				<a href="https://www.meetup.com/?_cookie-check=f8Ng7UUmU_ar5aqX" target="_blank">RSVP »</a>
-				<a href="http://techlancaster.com" target="_blank">Visit Site »</a>
+				<a href="https://www.meetup.com/?_cookie-check=f8Ng7UUmU_ar5aqX" target="_blank">RSVP <span>»</span></a>
+				<a href="http://techlancaster.com" target="_blank">Visit Site <span>»</span></a>
 			</div>
 		</article>
 		<section>
-			<section>
+			<section class="get_involved">
 				<h3>Get Involved</h3>
 				<p>We’re always looking for folks to share knowledge, organize and volunteer with existing meetups.
 				</p>
 				<a href="http://techlancaster.com/resources" target="_blank">Get in Touch »</a>
 			</section>
-			<section>
+			<section class="start_meetup">
 				<h3>Want to start a meetup?</h3>
 				<p>Whether you’re new to the area, or working with a new technology, we love seeing the local meetup scene grow. In fact, we’re working on some resources to help you get started.
 				</p>
