bugfix with responsive

--- a/calendar.html
+++ b/calendar.html
@@ -16,7 +16,7 @@
 						<a href="http://techlancaster.com/resources" target="_blank">RESOURCES FOR MEETUPS</a>
 					</li>
 					<li>
-						<a href="calendar.html">CALENDAR</a>
+						<a class="on_page" href="calendar.html">CALENDAR</a>
 					</li>
 					<li>
 						<a href="community.html">COMMUNITY</a>
