--- a/community.html
+++ b/community.html
@@ -19,7 +19,7 @@
 						<a href="calendar.html">CALENDAR</a>
 					</li>
 					<li>
-						<a href="community.html">COMMUNITY</a>
+						<a class="on_page" href="community.html">COMMUNITY</a>
 					</li>
 				</ul>
 			</nav>
