--- a/index.html
+++ b/index.html
@@ -36,14 +36,16 @@
 				<p>The past year has seen amazing growth in Lancaster's tech scene, and we believe this is only the beginning. As members of the tech community, we want to support this growth and ensure the community remains a healthy, open, and welcoming place for all its current and future members.
 				</p>
 			</article>
-			<h4 class="underbar">UPCOMING MEETUP</h4>
-			<div class="event">
-				<h3>Central PA Linux User Group</h3>
-				<h4 class="eh4">October 10, 6:30pm</h4>
-				<h5 class="eh5">Olmstead Building, Penn State</h5>
-				<a href="https://www.meetup.com/?_cookie-check=f8Ng7UUmU_ar5aqX" target="_blank">RSVP <span>»</span></as>
-				<a href="http://techlancaster.com" target="_blank">Visit Site <span>»</span></a>
-			</div>
+			<aside class="underbar">
+				<h4>UPCOMING MEETUP</h4>
+				<div class="event">
+					<h3>Central PA Linux User Group</h3>
+					<h4 class="eh4">October 10, 6:30pm</h4>
+					<h5 class="eh5">Olmstead Building, Penn State</h5>
+					<a href="https://www.meetup.com/?_cookie-check=f8Ng7UUmU_ar5aqX" target="_blank">RSVP <span>»</span></as>
+					<a href="http://techlancaster.com" target="_blank">Visit Site <span>»</span></a>
+				</div>
+			</aside>
 		</section>
 		<footer class="footer">
 			<h3>@techlancaster</h3>
