--- a/community.html
+++ b/community.html
@@ -60,13 +60,13 @@
 				<p>TechLancaster's primary goal is the support and growth of the tech scene in Lancaster, PA.
 				</p>
 			</aside>
-			<nav>
+			<nav class="underbar">
 				<h4>ON THIS PAGE</h4>
-				<a href="#core_values">Core Values</a>
-				<a href="#core_purpose">Core Purpose </a>
-				<a href="#code_of_conduct">Code of Conduct</a>
-				<a href="#principles">Principles</a>
-				<a href="#disclaimer">Disclaimer</a>
+				<a href="#core_values"><h3>Core Values</h3></a>
+				<a href="#core_purpose"><h3>Core Purpose</h3></a>
+				<a href="#code_of_conduct"><h3>Code of Conduct</h3></a>
+				<a href="#principles"><h3>Principles</h3></a>
+				<a href="#disclaimer"><h3>Disclaimer</h3></a>
 			</nav>
 		</section>
 		<div class="greybox" id="core_purpose">
